XX/01/25 (TRUST) New keyword  : dt_impr_nusselt_mean_only prints into a .out file the average of Nusselt related values on all or some specified boundaries (VDF/VEF/EF discretizations)
--------------------------------------------------------------------------------------------------
Release notes version 1.9.6_beta : Enhancements, modifications and corrected bugs since version 1.9.5 :
--------------------------------------------------------------------------------------------------
14/02/25 (TRUST) Major change : TRUST (and its baltiks) is now built with 64b support by default! Old 32b mode can still be built with '-with-32-bit-indices'
07/02/25 (TRUST) New Keyword  : [CMFD] semantics: add "models" keywords in addition to "correlations" to better fit with the Euler-Euler RANS two-phase flow framework.
06/02/25 (TRUST) Bug fix      : In PolyMAC and PolyMAC_P0P1NC, bug fix regarding nonzero Neumann conditions in the diffusive terms. See poissonSolver_PolyMAC validation form.
06/02/25 (TRUST) Bug fix      : Fix uninitialized buffer during communications in IJK FT (for TrioCFD)
03/02/25 (TRUST) New feature  : A new postprocessing field "wall_temperature" is now available for both VDF and VEF discretizations. It can be used to visualize the temperature at the wall for a thermal problem.
03/02/25 (TRUST) New feature  : A new boundary-condition "Echange_externe_radiatif" is now available for both VDF and VEF discretizations. It can be used to evacuate heat from a conduction problem via radiation.
03/02/25 (TRUST) New feature  : Multi-Sacalar Matricial Diffusion is now available for VDF discretization. See diffusion_multi_scalaire validation notebook.
28/01/25 (TRUST) New feature  : Add new PolyMAC option "Maillage_VDF" or "VDF_Mesh" that can be used when using a PolyMAC scheme with a VDF-like mesh.
28/01/25 (TRUST) New Change   : Option_PolyMAC_P0 should be now replaced by Option_PolyMAC.