@@ -1,4 +1,5 @@
-XX/01/25 (TRUST) New keyword  : dt_impr_nusselt_mean_only prints into a .out file the average of Nusselt related values on all or some specified boundaries (VDF/VEF/EF discretizations)
+XX/01/25 (TRUST) Change       : dt_impr_ustar_mean_only prints now surface-averaged values instead of mean values on boundaries
+XX/01/25 (TRUST) New keyword  : dt_impr_nusselt_mean_only prints into a .out file the surface-averaged Nusselt related values on all or some specified boundaries (VDF/VEF/EF discretizations)
 --------------------------------------------------------------------------------------------------
 Release notes version 1.9.6_beta : Enhancements, modifications and corrected bugs since version 1.9.5 :
 --------------------------------------------------------------------------------------------------
